# Stock_Market_prediction

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  quickstart_guide.md  requirements.txt
client/: package-lock.json  package.json
client/src/: App.js
client/src/components/: Legend.js  SearchAndChartHeader.js  SeriesChart.js  SidePanel.js  chart.js
notebooks/: arima.ipynb  arima_demo.ipynb  btp2.ipynb  lstm.ipynb
python/: main.py
python/config/: __init__.py  db_config.py  loader.py
python/models/: __init__.py  arima.py  gcn.py  lstm.py
python/utils/: __init__.py  data_fetcher.py  preprocessing.py
server/: getStock.js  index.js  package-lock.json  package.json
